--- a/project/src/app/user/shared/header/header.component.html
+++ b/project/src/app/user/shared/header/header.component.html
@@ -14,6 +14,13 @@
 
                         <ng-template [ngIf]="_ls.isloggedin()" [ngIfElse]="notloggedin">
                             <li class="scroll-to-section"><a routerLink="/my-profile">My-Profile</a></li>
+                            <li class="scroll-to-section dropdown">
+                                <a class=" dropdown-toggle" data-toggle="dropdown" href="#">Product</a>
+                                <div class="dropdown-menu">
+                                    <a href="#" class="dropdown-item" routerLink="/product-list">List</a>
+                                    <a href="#" class="dropdown-item" routerLink="/add-product">Add</a>
+                                </div>
+                            </li>
                             <li class="scroll-to-section"><a style="cursor: pointer;" (click)="_ls.logout()">Logout</a>
                             </li>
                         </ng-template>
